Added creocoder/yii2-flysystem composer require

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "hiqdev/yii2-theme-hyde": "<2.0 || dev-master",
         "hiqdev/yii2-asset-hiqdev": "<2.0 || dev-master",
         "hiqdev/yii2-module-pages": "<2.0 || dev-master",
-        "sadovojav/yii2-image-thumbnail": "dev-master"
+        "sadovojav/yii2-image-thumbnail": "dev-master",
+        "creocoder/yii2-flysystem": "^0.8.*"
     },
     "require-dev": {
         "hiqdev/hidev-php": "<2.0 || dev-master",
