--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
     "extra": {
         "config-plugin": {
             "params": "src/config/params.php",
-            "hisite": "src/config/hisite.php"
+            "hisite": "src/config/hisite.php",
+            "hidev": "src/config/hidev.php"
         }
     },
     "minimum-stability": "dev",
