--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "hiqdev/yii2-theme-hyde": "<2.0 || dev-master",
         "hiqdev/yii2-asset-hiqdev": "<2.0 || dev-master",
         "hiqdev/yii2-module-pages": "<2.0 || dev-master",
+        "hiqdev/yii2-error-notifier": "<2.0 || dev-master",
         "sadovojav/yii2-image-thumbnail": "dev-master",
         "creocoder/yii2-flysystem": "~0.8"
     },
@@ -69,7 +70,6 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
     "repositories": [
         {
             "type": "composer",
