--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,14 @@
     "extra": {
         "config-plugin": {
             "params": "src/config/params.php",
-            "hisite": "src/config/hisite.php",
-            "hidev": "src/config/hidev.php"
+            "hisite": [
+                "src/config/common.php",
+                "src/config/hisite.php"
+            ],
+            "hidev": [
+                "src/config/common.php",
+                "src/config/hidev.php"
+            ]
         }
     },
     "minimum-stability": "dev",
