--- a/src/components/projects.yml
+++ b/src/components/projects.yml
@@ -26,7 +26,7 @@ hidev:
 hisite:
     title:          HiSite
     lang:           yii2
-    package:        hisite-core
+    package:        hisite
     description:    Modular Yii2 CMS. This site is built with HiSite
 hiam:
     title:          HIAM
