--- a/composer.json
+++ b/composer.json
@@ -67,14 +67,9 @@
     "extra": {
         "config-plugin": {
             "params": "src/config/params.php",
-            "hisite": [
-                "src/config/common.php",
-                "src/config/hisite.php"
-            ],
-            "hidev": [
-                "src/config/common.php",
-                "src/config/hidev.php"
-            ]
+            "common": "src/config/common.php",
+            "hidev": "src/config/hidev.php",
+            "web": "src/config/web.php"
         }
     },
     "minimum-stability": "dev",
