updated packages list

--- a/src/components/packages.yml
+++ b/src/components/packages.yml
@@ -2,8 +2,8 @@ hipanel-core:
     name: hipanel-core
     description: 'HiPanel core package'
     forks: 3
-    stars: 15
-    watchers: 15
+    stars: 16
+    watchers: 16
     issues: 0
 yii2-higrid:
     name: yii2-higrid
@@ -18,14 +18,14 @@ yii2-thememanager:
     forks: 1
     stars: 7
     watchers: 7
-    issues: 0
+    issues: 2
 hipanel-module-client:
     name: hipanel-module-client
     description: 'Client Plugin for HiPanel'
     forks: 1
-    stars: 2
-    watchers: 2
-    issues: 2
+    stars: 3
+    watchers: 3
+    issues: 1
 hipanel-module-domain:
     name: hipanel-module-domain
     description: 'Domain Plugin for HiPanel'
@@ -51,8 +51,8 @@ hipanel-module-hosting:
     name: hipanel-module-hosting
     description: 'Hosting Plugin for HiPanel'
     forks: 2
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 yii2-combo:
     name: yii2-combo
@@ -72,8 +72,8 @@ hipanel-module-server:
     name: hipanel-module-server
     description: 'Server Plugin for HiPanel'
     forks: 1
-    stars: 1
-    watchers: 1
+    stars: 3
+    watchers: 3
     issues: 0
 yii2-menumanager:
     name: yii2-menumanager
@@ -85,7 +85,7 @@ yii2-menumanager:
 hidev:
     name: hidev
     description: 'Automation tool mixed with code generator for easier continuous development'
-    forks: 2
+    forks: 3
     stars: 10
     watchers: 10
     issues: 1
@@ -170,9 +170,9 @@ yii2-hiart:
     name: yii2-hiart
     description: 'ActiveRecord for API'
     forks: 6
-    stars: 22
-    watchers: 22
-    issues: 2
+    stars: 23
+    watchers: 23
+    issues: 0
 yii2-asset-adminlte:
     name: yii2-asset-adminlte
     description: 'Yii2 asset for bower adminlte'
@@ -205,8 +205,8 @@ yii2-theme-adminlte:
     name: yii2-theme-adminlte
     description: 'AdminLte Theme for hiqdev/yii2-thememanager'
     forks: 1
-    stars: 2
-    watchers: 2
+    stars: 4
+    watchers: 4
     issues: 0
 yii2-bootstrap-switch:
     name: yii2-bootstrap-switch
@@ -250,12 +250,12 @@ hidev-travis:
     stars: 1
     watchers: 1
     issues: 0
-hiam-core:
-    name: hiam-core
+hiam:
+    name: hiam
     description: 'Identity and Access Management server providing OAuth2, multi-factor authentication and more'
     forks: 1
-    stars: 4
-    watchers: 4
+    stars: 5
+    watchers: 5
     issues: 0
 yii2-hiam-authclient:
     name: yii2-hiam-authclient
@@ -389,7 +389,7 @@ omnipay-ecoin:
     forks: 1
     stars: 1
     watchers: 1
-    issues: 0
+    issues: 1
 omnipay-epayments:
     name: omnipay-epayments
     description: 'ePayments driver for Omnipay payment processing library'
@@ -485,8 +485,8 @@ hidev-phpunit:
     name: hidev-phpunit
     description: 'PHPUnit plugin for HiDev'
     forks: 1
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 hidev-license:
     name: hidev-license
@@ -560,7 +560,7 @@ composer-asset-plugin:
     issues: 0
 hidev-scrutinizer:
     name: hidev-scrutinizer
-    description: 'Scrutinizer plugin for HiDev'
+    description: 'HiDev plugin for Scrutinizer CI'
     forks: 2
     stars: 1
     watchers: 1
@@ -667,9 +667,9 @@ asset-packagist:
     name: asset-packagist
     description: 'Asset Packagist'
     forks: 9
-    stars: 88
-    watchers: 88
-    issues: 9
+    stars: 96
+    watchers: 96
+    issues: 5
 hipanel-rbac:
     name: hipanel-rbac
     description: 'RBAC implementation for HiPanel'
@@ -701,7 +701,7 @@ hidev-nginx:
 composer-config-plugin:
     name: composer-config-plugin
     description: 'Composer plugin for config assembling'
-    forks: 1
+    forks: 2
     stars: 5
     watchers: 5
     issues: 0
@@ -709,8 +709,8 @@ hidev-hiqdev:
     name: hidev-hiqdev
     description: 'HiQDev vendor configuration for HiDev'
     forks: 0
-    stars: 2
-    watchers: 2
+    stars: 3
+    watchers: 3
     issues: 0
 roundcube-hipanel-driver:
     name: roundcube-hipanel-driver
@@ -726,13 +726,6 @@ chkipper:
     stars: 2
     watchers: 2
     issues: 0
-asset-packagist.dev:
-    name: asset-packagist.dev
-    description: asset-packagist.dev
-    forks: 1
-    stars: 3
-    watchers: 3
-    issues: 0
 hidev-chkipper:
     name: hidev-chkipper
     description: 'Chkipper plugin for HiDev'
@@ -744,19 +737,19 @@ yii2-language:
     name: yii2-language
     description: 'Yii2 module for language switching'
     forks: 0
-    stars: 3
-    watchers: 3
+    stars: 4
+    watchers: 4
     issues: 0
 hisite:
     name: hisite
-    description: 'Hisite core package'
+    description: 'Hisite Yii2 base project'
     forks: 1
-    stars: 2
-    watchers: 2
+    stars: 4
+    watchers: 4
     issues: 0
 yii2-theme-flat:
     name: yii2-theme-flat
-    description: 'Flat Theme for hiqdev/yii2-thememanager'
+    description: 'Flat Theme for Yii2 projects'
     forks: 1
     stars: 2
     watchers: 2
@@ -807,8 +800,8 @@ hisite-template:
     name: hisite-template
     description: 'HiSite Project Template'
     forks: 0
-    stars: 2
-    watchers: 2
+    stars: 5
+    watchers: 5
     issues: 0
 yii2-theme-agency:
     name: yii2-theme-agency
@@ -873,12 +866,12 @@ hipanel-com:
     stars: 2
     watchers: 2
     issues: 0
-hiam:
-    name: hiam
+hiam-template:
+    name: hiam-template
     description: 'Identity and Access Management server providing OAuth2, RBAC, multi-factor authentication and more'
     forks: 0
-    stars: 0
-    watchers: 0
+    stars: 1
+    watchers: 1
     issues: 0
 hipanel-module-document:
     name: hipanel-module-document
@@ -898,8 +891,8 @@ hiqdev.com-core:
     name: hiqdev.com-core
     description: 'hiqdev.com site'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 yii2-menus:
     name: yii2-menus
@@ -968,8 +961,8 @@ hipanel-hiart:
     name: hipanel-hiart
     description: 'HiPanel Hiart'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 yii2-hiart-guzzle:
     name: yii2-hiart-guzzle
@@ -1017,8 +1010,8 @@ php-billing:
     name: php-billing
     description: 'PHP Billing Library'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 php-units:
     name: php-units
@@ -1031,8 +1024,8 @@ omnipay-freekassa:
     name: omnipay-freekassa
     description: 'FreeKassa driver for Omnipay PHP payment library'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 hidev-webapp:
     name: hidev-webapp
@@ -1041,19 +1034,19 @@ hidev-webapp:
     stars: 1
     watchers: 1
     issues: 0
-hiapi-core:
-    name: hiapi-core
-    description: 'HiAPI - template for Yii2 based API'
+hiapi:
+    name: hiapi
+    description: 'HiAPI Yii2 base project for building API'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 billing-hiapi:
     name: billing-hiapi
     description: 'API for Billing'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 2
+    watchers: 2
     issues: 0
 docker-php:
     name: docker-php
@@ -1073,13 +1066,34 @@ yii2-monitoring:
     name: yii2-monitoring
     description: 'Health monitoring for Yii2 applications'
     forks: 0
-    stars: 3
-    watchers: 3
+    stars: 4
+    watchers: 4
     issues: 0
 yii2-yandex-metrika:
     name: yii2-yandex-metrika
     description: 'Yandex.Metrika counter for Yii2 applications'
     forks: 0
-    stars: 1
-    watchers: 1
+    stars: 3
+    watchers: 3
+    issues: 0
+docker-letsencrypt-nginx-proxy-companion:
+    name: docker-letsencrypt-nginx-proxy-companion
+    description: 'LetsEncrypt companion container for nginx-proxy'
+    forks: 0
+    stars: 0
+    watchers: 0
+    issues: 0
+nginx-proxy:
+    name: nginx-proxy
+    description: 'Automated nginx proxy for Docker containers using docker-gen'
+    forks: 0
+    stars: 0
+    watchers: 0
+    issues: 0
+asset-packagist.dev:
+    name: asset-packagist.dev
+    description: 'Root project for Asset Packagist'
+    forks: 1
+    stars: 2
+    watchers: 2
     issues: 0
